Bug 98026 - Cannot set album thumbnail by drag'n'drop
Summary: Cannot set album thumbnail by drag'n'drop
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Drag&Drop (other bugs)
Version First Reported In: 0.7.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-01-27 22:59 UTC by Gilles Schintgen
Modified: 2022-01-13 07:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 7.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gilles Schintgen 2005-01-27 22:59:10 UTC
Version:           0.7.1 (using KDE KDE 3.3.2)
Installed from:    Gentoo Packages
OS:                Linux

When I drop an image to the album name, a popup appears asking for confirmation to change the album thumbnail, but it doesn't work. Right-clicking the image and clicking "Set as Album Thumbnail" works just fine.
Comment 1 Joern Ahrens 2005-01-27 23:40:09 UTC
CVS commit by jahrens: 

BUG: 98026


  M +1 -1      albumfolderview.cpp   1.71


--- kdeextragear-3/digikam/digikam/albumfolderview.cpp  #1.70:1.71
@@ -1618,5 +1618,5 @@ void AlbumFolderView::phyAlbumDropEvent(
                 QString errMsg;
                 AlbumManager::instance()->updatePAlbumIcon(destAlbum,
-                    urls.first().path(), true, errMsg);
+                    urls.first().filename(), true, errMsg);
             }
             return;


Comment 2 Gilles Schintgen 2005-01-27 23:48:20 UTC
On Thursday 27 January 2005 23:40, Joern Ahrens wrote:
>            What    |Removed                     |Added
> ---------------------------------------------------------------------------
>              Status|UNCONFIRMED                 |RESOLVED
>          Resolution|                            |FIXED

Wow, that was fast! Great!