BUG: 98026

svn path=/trunk/kdeextragear-3/digikam/; revision=383042